--- a/cashup_frontend/package.json
+++ b/cashup_frontend/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-spinners": "^0.11.0",
+    "serve": "^12.0.0",
     "styled-components": "^5.3.0",
     "styled-reset": "^4.3.4",
     "web-vitals": "^1.0.1"
@@ -23,6 +24,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "./",
   "eslintConfig": {
     "extends": [
       "react-app",
